legacy cursor movement (8 or 12 direction movement) (16 felt worse)